--- a/CrashLoyal/CrashLoyal.vcxproj
+++ b/CrashLoyal/CrashLoyal.vcxproj
@@ -25,6 +25,7 @@
     <ClCompile Include="src\Mob.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Mob_River.h" />
     <ClInclude Include="src\Attackable.h" />
     <ClInclude Include="src\Building.h" />
     <ClInclude Include="src\GameState.h" />
@@ -33,7 +34,6 @@
     <ClInclude Include="src\Point.h" />
     <ClInclude Include="src\Mob_Swordsman.h" />
     <ClInclude Include="src\Waypoint.h" />
-    <ClInclude Include="Tower.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
